# Financial-Ticker-Analyzer

./: README.md  architecture_diagram.md
backend/: .env  README.md  main.py  pyproject.toml  requirements.txt  run.py
backend/src/agents/: decision.py  manager.py  news.py  trend.py
backend/src/config/: __init__.py  settings.py
backend/src/routes/: analyze.py
backend/src/services/: __init__.py  fetch_data.py  telemetry_service.py
backend/src/utils/: azure_utils.py
frontend/: .gitignore  app.py  pyproject.toml  requirements.txt
